# quantum-reservoir-computing

./: .gitignore  Mori_qrc_classification.ipynb  PHYSICS.md  README.md  main.py  pyproject.toml
